# aifolimizer

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.example.json  AGENTS.md  CLAUDE.md  CLAUDE.original.md  LICENSE  README.md  SECURITY.md  TRACK_RECORD.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh  supabase_schema.sql
.claude/: settings.example.json  settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: analyst.md  researcher.md
.claude/context/: STATE.md  architecture.md  architecture.original.md  backtest_results.md  changes.md  changes.original.md  lessons.md  signal-history-pg-port-plan.md  signal-policy-fix-plan.md
.claude/skills/adversarial-research/: SKILL.md
.claude/skills/auto-rebalance/: SKILL.md
.claude/skills/cash-deployment/: SKILL.md
.claude/skills/daily-briefing/: SKILL.md
.claude/skills/dividend-strategy/: SKILL.md
.claude/skills/earnings-analyzer/: SKILL.md
.claude/skills/earnings-postmortem/: SKILL.md
.claude/skills/employer-stock/: SKILL.md
.claude/skills/health-check/: SKILL.md
.claude/skills/macro-impact/: SKILL.md
.claude/skills/momentum-scanner/: SKILL.md
.claude/skills/pead-tracker/: SKILL.md
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-notes-v0.1.0.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
backend/: main.py  mcp_login.py  mcp_server.py  personal_context.template.json  requirements.txt  ruff.toml  run.py  run_mcp_tools.py
backend/app/: security.py
backend/scripts/: build_skills.py  check_doc_counts.py  health_check.py  lock_deps.ps1  lock_deps.sh  mfa_notify.py  mfa_popup.py  migrate_jsonl_to_postgres.py  run_alerts.py  run_maintenance.py  run_skill_fallback.py  schedule_alerts.ps1  send_daily_briefing.py  send_telegram.py  smoke_e2e.py  smoke_mcp_tools.py  worker.py
backend/tests/: smoke_phase0.py  smoke_phase14.py  test_backtest_core.py  test_calibration.py  test_data_router_resolve.py  test_data_source_base.py  test_decision_memory_open.py  test_discovery.py  test_dividend_calendar.py  test_earnings_commentary.py  test_event_dispatcher.py  test_http_helpers_retry_after.py  test_kpi_suite.py  test_live_metrics.py  test_market_regime.py  test_mcp_pii_integration.py  test_news_redaction.py  test_options_theta.py  test_personal_context.py  test_pii_filter.py  test_recommendations_evidence.py  test_recommendations_filter.py  test_recommendations_phase2.py  test_risk_gate.py  test_security.py  test_shadow_account_fifo.py  test_signal_analytics.py  test_signal_backfill.py  test_signal_change_detector.py  test_signal_history_horizons.py  test_signal_kpi.py  test_skill_evidence.py  test_skill_llm_runner.py  test_symbol_resolver.py  test_telegram_notifier.py  test_trade_journal.py  test_trust_report.py  test_wealthsimple_symbol.py  test_weights_tuner.py
docs/: FAQ.md  SETUP.md  mcp-servers-pr-draft.md
docs/examples/: README.md  cash-deployment.md  daily-briefing.md  scrubbed-prompt.txt  stock-analysis.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: AlertsPanel.tsx  AllocationChart.tsx  BenchmarkWidget.tsx  CountdownLabel.tsx  DiscoveryPanel.tsx  HealthScoreWidget.tsx  LiveKPIPanel.tsx  MacroWidget.tsx  OptimizerWidget.tsx  PortfolioTable.tsx  PriceChart.tsx  RecommendationsPanel.tsx  RiskGateBanner.tsx  ScreenerPanel.tsx  SessionExpiredBanner.tsx  SignalCard.tsx  SignalHistoryChart.tsx  SkillSnapshotsPanel.tsx  TrustDashboardPanel.tsx  WatchlistManager.tsx  WatchlistPanel.tsx  WeightsPanel.tsx
frontend/hooks/: usePortfolioStream.ts  useSkillSnapshots.ts
frontend/lib/: api.ts
scripts/: AUTOMATION.md  aifolimizer-launch.ps1  backend-watchdog.ps1  install-backend-service.ps1  register-skill-task.ps1  run-claude-skill.ps1  run-claude-skill.sh
scripts/posix/: README.md  aifolimizer-daily-briefing.service  aifolimizer-daily-briefing.timer  com.aifolimizer.daily-briefing.plist
(+147 files in other folders)
