# Python project metadata. The `dependencies` list below MIRRORS backend/requirements.txt
# (kept in sync by hand) so `uv run` can build the runtime env directly from this file —
# that is what the Claude Code plugin (.claude-plugin/plugin.json) launches the MCP server with.
# backend/requirements.txt remains the source for the setup.sh/setup.ps1 venv path. pip install -e .[dev] for development.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifolimizer"
version = "0.2.0"
description = "Open-source MCP-native portfolio brain. Plugs a live brokerage account into Claude Desktop or Claude Code through a local backend, exposes 102 analysis tools across 15 data adapters, and ships 25 ready-to-run skills covering risk, earnings, macro, dividends, tax, technicals, and quant anomalies."
license = {text = "MIT"}
requires-python = ">=3.12,<3.14"
authors = [{name = "Tushar Aggarwal"}]
readme = "README.md"
# MIRROR of backend/requirements.txt — keep the two lists identical.
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.2",
    "yfinance>=0.2.43",
    "pandas>=2.2.2",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "python-dotenv>=1.0.1",
    "mcp>=1.2.0",
    "ws-api>=0.33.0",
    "diskcache>=5.6.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "rq>=2.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "pytrends>=4.9.2",
    "curl_cffi>=0.7.0",
]

[project.optional-dependencies]
dev = ["ruff", "pyright", "pytest", "pytest-cov", "pip-audit", "pre-commit"]

# uv builds a deps-only env: the repo is a flat `app.*` tree rooted at backend/, not a
# distributable package. `uv run` puts backend/ on sys.path[0] at launch, so imports resolve
# without installing the project itself. package=false stops uv from trying to build it.
[tool.uv]
package = false

[project.urls]
Homepage = "https://github.com/tusharagg1/aifolimizer"
Issues = "https://github.com/tusharagg1/aifolimizer/issues"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
"backend/mcp_server.py" = ["E402"]
"backend/mcp_login.py" = ["E402"]
"backend/scripts/smoke_mcp_tools.py" = ["E402"]
"backend/app/services/llm_router.py" = ["E402"]
"backend/tests/test_kpi_suite.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.pyright]
pythonVersion = "3.12"
reportMissingImports = "error"
